--- a/html/PROJECT2.html
+++ b/html/PROJECT2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>First Page</title>
 	<link href="stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 <body>
