--- a/page1.html
+++ b/page1.html
@@ -6,12 +6,22 @@
 </head>
 <body>
 	<header>
-		<body>
- <header>
-  <img src="doge.png">
-  <p> Aram Garabedian Inc.</p>
-  <p>Aram Garabedian, CEO</p>
-<p>aram@email.com</p>
- </header>
+		<img src="./doge.png">
+		<p> Garabedian & Casarez Inc.</p>
+		<p>Aram Garabedian, CEO</p>
+		<p>aram@GnC.com</p>
+	</header>
+	<p>Oh acceptance apartments up sympathize astonished delightful. Waiting him new lasting towards. Continuing melancholy especially so to. Me unpleasing impossible in attachment announcing so astonished. What ask leaf may nor upon door. Tended remain my do stairs. Oh smiling amiable am so visited cordial in offices hearted.</p>
+	<p>Oh acceptance apartments up sympathize astonished delightful. Waiting him new lasting towards. Continuing melancholy especially so to. Me unpleasing impossible in attachment announcing so astonished. What ask leaf may nor upon door. Tended remain my do stairs. Oh smiling amiable am so visited cordial in offices hearted.</p>
+	<p>Oh acceptance apartments up sympathize astonished delightful. Waiting him new lasting towards. Continuing melancholy especially so to. Me unpleasing impossible in attachment announcing so astonished. What ask leaf may nor upon door. Tended remain my do stairs. Oh smiling amiable am so visited cordial in offices hearted.</p>
+	<p>Oh acceptance apartments up sympathize astonished delightful. Waiting him new lasting towards. Continuing melancholy especially so to. Me unpleasing impossible in attachment announcing so astonished. What ask leaf may nor upon door. Tended remain my do stairs. Oh smiling amiable am so visited cordial in offices hearted.</p>
+	<footer>
+		<img src="./normal doge.png">
+		<p> Garabedian & Casarez Inc.</p>
+		<p>Oscar Casarez, CEO</p>
+		<p>oscar@GnC.com</p>
+		<h5> Copyright Info</h5>
+		<p> Copyright by Aram &copy; </p>
+	</footer>
 </body>
 </html>
