fixed css sheet

--- a/page1.html
+++ b/page1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>First Page</title>
-	<link href="stylesheet.css" rel="stylesheet" type="text/css">
+	<link href="stylesheet main.css" rel="stylesheet main" type="text/css">
 </head>
 <body>
 	<header>
