changed search box

--- a/page1.html
+++ b/page1.html
@@ -19,10 +19,10 @@
 		<div class="search">
 			<form method="GET" action="http://www.google.com/search">
 				<p> <label>Search: </label><input type="search" name="query"placeholder="Your query">
-					<input type="submit" name=""value="search"></p>
+					<input type="submit" name=""value="search">
 					<!-- search bubble choices-->
-					<p><label><input type="radio" name="search"value="external">Search the Web</label></p>
-					<p><label><input type="radio" name="search"value="internal">Search within the Website</label></p>
+					<label><input type="radio" name="search"value="external">Search the Web</label>
+					<label><input type="radio" name="search"value="internal">Search within the Website</label></p>
 				</form>
 			</div>
 	</header>
