finished most of footer and added 2nd page

--- a/page1.html
+++ b/page1.html
@@ -10,22 +10,24 @@
 			<img src="./doge.png">
 			<img src="./at sign.png" class="at">
 		</div>
-		<p> Garabedian & Casarez Inc.<br />
-			Aram Garabedian, CEO<br />
+		<p> Garabedian & Casarez Inc.<br>
+			Aram Garabedian, CEO<br>
 			aram@GnC.com
 		</p>
+
 		<h2 class="clear">Welcome to our Website!</h2>
+
 		<div class="search">
 			<form method="GET" action="http://www.google.com/search">
 				<p> <label>Search: </label><input type="search" name="query"placeholder="Your query">
 					<input type="submit" name=""value="search">
 					<!-- Search Radio Buttons-->
-				<label><input type="radio" name="search"value="external">Search the Web</label>
-				<label><input type="radio" name="search"value="internal">Search within the Website</label>
-			</p>
+				<label><input type="radio" name="search"value="external" checked="checked">Search the Web</label>
+				<label><input type="radio" name="search"value="internal">Search within the Website</label></p>
 			</form>
 		</div>
 	</header>
+
 	<article>
 		<form method="post" autocomplete="on">
 			<h1>Sign up today to receive updates.</h1>
@@ -69,8 +71,8 @@
 				<p><input type="radio" name="experience" value="fifteentotwenty">15-20</p>
 				<p><input type="radio" name="experience" value="twentyplus">20+</p>
 			</form>
-			<p><label>Skill level in HTML<input type="range" name="skill" min="0" max="10"></label></p>
-			<p><label>Contact Preference</label></p>
+			<p><label>Skill level in HTML: <input type="range" name="skill" min="0" max="10"></label></p>
+			<p><label>Contact Preference: </label></p>
 			<p><input type="checkbox" name="option1" name="preference"><label>I would like to receive emails about new products and offers</label></p>
 			<p><input type="checkbox" name="option1" name="preference"><label>I would like to receive emails about my account and membership</label></p>
 			<p><input type="checkbox" name="option1" name="preference"><label>I would like to receive mail</label></p>
@@ -79,13 +81,21 @@
 		</form>
 	</article>
 <footer>
-  <img src="./normal doge.png">
-			<p> Garabedian & Casarez Inc.<br />
-				Oscar Casarez, CEO<br />
-				oscar@GnC.com
-			</p>
-			<h5>Copyright Info</h5>
-			<p>Copyright by Aram &copy; </p>
+		<img src="./normal doge.png">
+		<img src="./at sign.png" class="at">
+		<p> Garabedian & Casarez Inc.<br>
+			Oscar Casarez, CEO<br>
+			oscar@GnC.com
+		</p>
+		<h3 class="clear"><a href="page2.html">&copy; Garabedian & Casarez Inc., All Rights Reserved</h3>
+
+		<address>
+			Contact Us at:<br />
+			<a href="mailto:contact@GnC.com">contact@GnC.com</a><br>
+			5643 Adams Blvd.<br>
+			Richmond, SC 25694<br>
+			<a href="tel:1-909-695-4621">1-909-695-4621</a>
+		</address>
 	</footer>
 </body>
 </html>
