fixed contact info footer

--- a/page1.html
+++ b/page1.html
@@ -80,6 +80,7 @@
 			<input type="reset" name="Reset">
 		</form>
 	</article>
+	
 <footer>
 		<img src="./normal doge.png">
 		<img src="./at sign.png" class="at">
@@ -89,11 +90,11 @@
 		</p>
 		<h3 class="clear"><a href="page2.html">&copy; Garabedian & Casarez Inc., All Rights Reserved</h3>
 
-		<address>
+		<address class="contact">
 			Contact Us at:<br />
 			<a href="mailto:contact@GnC.com">contact@GnC.com</a><br>
 			5643 Adams Blvd.<br>
-			Richmond, SC 25694<br>
+			Richmond, NC 25694<br>
 			<a href="tel:1-909-695-4621">1-909-695-4621</a>
 		</address>
 	</footer>
