--- a/page1.html
+++ b/page1.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Sign Up</title>
 	<link href="stylesheet main.css" rel="stylesheet main" type="text/css">
+	<link href="page1-css.css" rel="page1-css" type="text/css">
 </head>
 <body>
 	<header>
@@ -29,7 +30,7 @@
 	</header>
 
 	<article>
-		<form method="post" autocomplete="on">
+		<form class="center" method="post" autocomplete="on">
 			<h1>Sign up today to receive updates.</h1>
 			<p><label>First Name: <input type="text" name="firstName" placeholder="John"/></label></p>
 			<p><label>Last Name: <input type="text" name="lastName" placeholder="Doe"/></label></p>
@@ -63,14 +64,12 @@
 			</label></p>
 			<p><label>Phone Number: <input type="tel" name="telephone" autocomplete="off"/>(###-###-####)</label></p>
 			<p><label>Link to your homepage: <input type="url" name="yourURL" autocomplete="off"/></label></p>
-			<form action="">
-				<p><label>Years of experience: </label></p>
-				<p><input type="radio" name="experience" value="zerotofive">0-5</p>
-				<p><input type="radio" name="experience" value="fivetoten">5-10</p>
-				<p><input type="radio" name="experience" value="tentofifteen">10-15</p>
-				<p><input type="radio" name="experience" value="fifteentotwenty">15-20</p>
-				<p><input type="radio" name="experience" value="twentyplus">20+</p>
-			</form>
+			<p><label>Years of experience: </label></p>
+			<p><input type="radio" name="experience" value="zerotofive">0-5</p>
+			<p><input type="radio" name="experience" value="fivetoten">5-10</p>
+			<p><input type="radio" name="experience" value="tentofifteen">10-15</p>
+			<p><input type="radio" name="experience" value="fifteentotwenty">15-20</p>
+			<p><input type="radio" name="experience" value="twentyplus">20+</p>
 			<p><label>Skill level in HTML: <input type="range" name="skill" min="0" max="10"></label></p>
 			<p><label>Contact Preference: </label></p>
 			<p><input type="checkbox" name="option1" name="preference"><label>I would like to receive emails about new products and offers</label></p>
