Fixed Merge conflicts

--- a/page1.html
+++ b/page1.html
@@ -30,14 +30,10 @@
 	</header>
 
 	<article>
-<<<<<<< HEAD
-		<form class="center" method="post" autocomplete="on">
-=======
-		<form method="post" action="http://www.deitel.com" autocomplete="off">
->>>>>>> 0a654fc4c2e82e1bebd6540eb204f901dae3f798
+		<form method="post" class="center" action="http://www.deitel.com" autocomplete="off">
 			<h1>Sign up today to receive updates.</h1>
 			<p><label>First Name: <input type="text" name="firstName" placeholder="John" autocomplete="on" autofocus></label></p>
-			<p><label>Last Name: <input type="text" name="lastName" placeholder="Doe"/></label></p>
+			<p><label>Last Name: <input type="text" name="lastName" autocomplete="on" placeholder="Doe"/></label></p>
 			<p><label>Email: <input type="email" name="email" placeholder="name@domain.com" autocomplete="off"/></label></p>
 			<p><label>Password: <input type="Password" name="password"/></label></p>
 			<p><label>Re-Enter Password: <input type="password" name="reEnterPassword"/></label></p>
@@ -68,17 +64,6 @@
 					<option value = "4">	
 				</datalist>
 			</label></p>
-<<<<<<< HEAD
-			<p><label>Phone Number: <input type="tel" name="telephone" autocomplete="off"/>(###-###-####)</label></p>
-			<p><label>Link to your homepage: <input type="url" name="yourURL" autocomplete="off"/></label></p>
-			<p><label>Years of experience: </label></p>
-			<p><input type="radio" name="experience" value="zerotofive">0-5</p>
-			<p><input type="radio" name="experience" value="fivetoten">5-10</p>
-			<p><input type="radio" name="experience" value="tentofifteen">10-15</p>
-			<p><input type="radio" name="experience" value="fifteentotwenty">15-20</p>
-			<p><input type="radio" name="experience" value="twentyplus">20+</p>
-=======
-
 			<p><label>Phone Number:</label><input type="tel" name="telephone" pattern="\d{3}[\-]\d{3}[\-]\d{4}" autocomplete="off">(###-###-####)</p>
 
 			<p><label>Link to your homepage:</label> <input type="url" name="yourURL" autocomplete="off"/></p>
@@ -89,8 +74,6 @@
 			<p><input type="radio" name="experience" value="tentofifteen">10-15</p>		
 			<p><input type="radio" name="experience" value="fifteentotwenty">15-20</p>
 			<p><input type="radio" name="experience" value="twentyplus">20+</p>
-
->>>>>>> 0a654fc4c2e82e1bebd6540eb204f901dae3f798
 			<p><label>Skill level in HTML: <input type="range" name="skill" min="0" max="10"></label></p>
 
 			<p><label>Contact Preference: </label></p>
