--- a/page1.html
+++ b/page1.html
@@ -20,11 +20,11 @@
 
 		<div class="search">
 			<form method="GET" action="http://www.google.com/search">
-				<p> <label>Search: </label><input type="search" name="query"placeholder="Your query">
-					<input type="submit" name=""value="search">
+				<p><label>Search: </label><input type="search" name="query"placeholder="Your query">
+					<input type="submit" name="" value="search"/>
 					<!-- Search Radio Buttons-->
-				<label><input type="radio" name="search"value="external" checked="checked">Search the Web</label>
-				<label><input type="radio" name="search"value="internal">Search within the Website</label></p>
+				<label><input type="radio" name="search" value="external" checked="checked">Search the Web</label>
+				<label><input type="radio" name="search" value="internal">Search within the Website</label></p>
 			</form>
 		</div>
 	</header>
@@ -40,16 +40,16 @@
 			<p><label>Birthdate: <input type="date" name="birthdate" value="1998-01-01" /></label></p>
 
 			<p><label> Major: 
-				<input list = "majors" name="major"placeholder="Select a major"/>
+				<input list = "majors" name="major" placeholder="Select a major"/>
 				<datalist id = "majors">
-					<option value="Civil Engineering">
-					<option value="Computer Engineering">
-					<option value="Computer Information Technology">
-					<option value="Computer Science">
-					<option value="Electrical Engineering">
-					<option value="Engineering Management">
-					<option value="Manufactoring Systems Engineering">
-					<option value="Mechanical Engineering">	
+					<option value="Civil Engineering"></option>
+					<option value="Computer Engineering"></option>
+					<option value="Computer Information Technology"></option>
+					<option value="Computer Science"></option>
+					<option value="Electrical Engineering"></option>
+					<option value="Engineering Management"></option>
+					<option value="Manufactoring Systems Engineering"></option>
+					<option value="Mechanical Engineering"></option>
 				</datalist>
 			</label></p>
 
@@ -58,10 +58,10 @@
 			<p><label>Number of years in college: 
 				<input list = "collegeYears" name="collegeYear"/>
 				<datalist id = "collegeYears">
-					<option value = "1">
-					<option value = "2">
-					<option value = "3">
-					<option value = "4">	
+					<option value = "1"></option>
+					<option value = "2"></option>
+					<option value = "3"></option>
+					<option value = "4"></option>	
 				</datalist>
 			</label></p>
 			<p><label>Phone Number:</label><input type="tel" name="telephone" pattern="\d{3}[\-]\d{3}[\-]\d{4}" autocomplete="off">(###-###-####)</p>
@@ -78,8 +78,8 @@
 
 			<p><label>Contact Preference: </label></p>
 			<p><input type="checkbox" name="option1" name="preference"><label>I would like to receive emails about new products and offers</label></p>
-			<p><input type="checkbox" name="option1" name="preference"><label>I would like to receive emails about my account and membership</label></p>
-			<p><input type="checkbox" name="option1" name="preference"><label>I would like to receive mail</label></p>
+			<p><input type="checkbox" name="option2" name="preference"><label>I would like to receive emails about my account and membership</label></p>
+			<p><input type="checkbox" name="option3" name="preference"><label>I would like to receive mail</label></p>
 
 			<input type="submit" value="Sign Up">
 			<input type="reset" name="Reset">
@@ -87,21 +87,22 @@
 		</form>
 	</article>
 	
-<footer>
-		<img src="./normal doge.png">
-		<img src="./at sign.png" class="at">
-		<p> Garabedian & Casarez Inc.<br>
-			Oscar Casarez, CEO<br>
-			oscar@GnC.com
-		</p>
-		<h3 class="clear"><a href="page2.html">&copy; Garabedian & Casarez Inc., All Rights Reserved</a></h3>
-
-		<address class="contact">
-			Contact Us at:<br />
-			<a href="mailto:contact@GnC.com">contact@GnC.com</a><br>
-			5643 Adams Blvd.<br>
-			Richmond, NC 25694<br>
-			<a href="tel:1-909-695-4621">1-909-695-4621</a>
+	<footer class="clear">
+		<div class="alignleft">
+			<img src="./normal doge.png">
+			<img src="./at sign.png" class="at">
+			<p> Garabedian &amp; Casarez Inc.<br>
+				Oscar Casarez, CEO<br>
+				oscar@GnC.com
+			</p>
+			<h3><a href="page2.html">&copy; Garabedian &amp; Casarez Inc., All Rights Reserved</a></h3>
+		</div>
+		<address class="alignright">
+				Contact Us at:<br>
+				<a href="mailto:contact@GnC.com">contact@GnC.com</a><br>
+				5643 Adams Blvd.<br>
+				Richmond, NC 25694<br>
+				<a href="tel:1-909-695-4621">1-909-695-4621</a>
 		</address>
 	</footer>
 </body>
