--- a/page2.html
+++ b/page2.html
@@ -2,8 +2,48 @@
 <html>
 <head>
 	<title>Privacy Agreement</title>
+	<link href="stylesheet main.css" rel="stylesheet main" type="text/css">
 </head>
 <body>
-<p> Link works</p>
+	<header>
+ 		<div>
+			<img src="./doge.png">
+			<img src="./at sign.png" class="at">
+		</div>
+		<p> Garabedian & Casarez Inc.<br>
+			Aram Garabedian, CEO<br>
+			aram@GnC.com
+		</p>
+
+		<h2 class="clear">Welcome to our Website!</h2>
+
+		<div class="search">
+			<form method="GET" action="http://www.google.com/search">
+				<p><label>Search: </label><input type="search" name="query"placeholder="Your query">
+					<input type="submit" name="" value="search"/>
+					<!-- Search Radio Buttons-->
+				<label><input type="radio" name="search" value="external" checked="checked">Search the Web</label>
+				<label><input type="radio" name="search" value="internal">Search within the Website</label></p>
+			</form>
+		</div>
+	</header>
+	<footer class="clear">
+		<div class="alignleft">
+			<img src="./normal doge.png">
+			<img src="./at sign.png" class="at">
+			<p> Garabedian &amp; Casarez Inc.<br>
+				Oscar Casarez, CEO<br>
+				oscar@GnC.com
+			</p>
+			<h3><a href="page2.html">&copy; Garabedian &amp; Casarez Inc., All Rights Reserved</a></h3>
+		</div>
+		<address class="alignright">
+				Contact Us at:<br>
+				<a href="mailto:contact@GnC.com">contact@GnC.com</a><br>
+				5643 Adams Blvd.<br>
+				Richmond, NC 25694<br>
+				<a href="tel:1-909-695-4621">1-909-695-4621</a>
+		</address>
+	</footer>
 </body>
 </html>
