--- a/page1.html
+++ b/page1.html
@@ -2,16 +2,16 @@
 <html>
 <head>
 	<title>Sign Up</title>
-	<link href="stylesheet main.css" rel="stylesheet main" type="text/css">
-	<link href="page1-css.css" rel="page1-css" type="text/css">
+	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="page1-css.css">
 </head>
-<body>
+<body class="classBody">
 	<header>
  		<div>
 			<img src="./doge.png">
 			<img src="./at sign.png" class="at">
 		</div>
-		<p> Garabedian & Casarez Inc.<br>
+		<p> Garabedian &amp; Casarez Inc.<br>
 			Aram Garabedian, CEO<br>
 			aram@GnC.com
 		</p>
@@ -20,7 +20,7 @@
 
 		<div class="search">
 			<form method="GET" action="http://www.google.com/search">
-				<p><label>Search: </label><input type="search" name="query"placeholder="Your query">
+				<p><label>Search: </label><input type="search" name="query" placeholder="Your query"/>
 					<input type="submit" name="" value="search"/>
 					<!-- Search Radio Buttons-->
 				<label><input type="radio" name="search" value="external" checked="checked">Search the Web</label>
@@ -31,59 +31,52 @@
 
 	<article>
 		<form method="post" class="center" action="http://www.deitel.com" autocomplete="off">
-			<h1>Sign up today to receive updates.</h1>
-			<p><label>First Name: <input type="text" name="firstName" placeholder="John" autocomplete="on" autofocus></label></p>
-			<p><label>Last Name: <input type="text" name="lastName" autocomplete="on" placeholder="Doe"/></label></p>
-			<p><label>Email: <input type="email" name="email" placeholder="name@domain.com" autocomplete="off"/></label></p>
-			<p><label>Password: <input type="Password" name="password"/></label></p>
-			<p><label>Re-Enter Password: <input type="password" name="reEnterPassword"/></label></p>
-			<p><label>Birthdate: <input type="date" name="birthdate" value="1998-01-01" /></label></p>
-
-			<p><label> Major: 
-				<input list = "majors" name="major" placeholder="Select a major"/>
-				<datalist id = "majors">
-					<option value="Civil Engineering"></option>
-					<option value="Computer Engineering"></option>
-					<option value="Computer Information Technology"></option>
-					<option value="Computer Science"></option>
-					<option value="Electrical Engineering"></option>
-					<option value="Engineering Management"></option>
-					<option value="Manufactoring Systems Engineering"></option>
-					<option value="Mechanical Engineering"></option>
-				</datalist>
-			</label></p>
-
-			<p><label>Your Favorite Color: <input type="color" name="favoriteColor"/></label></p>
-
-			<p><label>Number of years in college: 
-				<select>
-					<option selected disabled hidden value="none">[choose]</option>
-					<option value = "1">1</option>
-					<option value = "2">2</option>
-					<option value = "3">3</option>
-					<option value = "4">4</option>
-				</select>
-			</label></p>
-			<p><label>Phone Number:</label><input type="tel" name="telephone" pattern="\d{3}[\-]\d{3}[\-]\d{4}" autocomplete="off">(###-###-####)</p>
-
-			<p><label>Link to your homepage:</label> <input type="url" name="yourURL" autocomplete="off"/></p>
-
-			<p><label>Years of experience: </label></p>
-			<p><input type="radio" name="experience" value="zerotofive">0-5</p>
-			<p><input type="radio" name="experience" value="fivetoten">5-10</p>
-			<p><input type="radio" name="experience" value="tentofifteen">10-15</p>		
-			<p><input type="radio" name="experience" value="fifteentotwenty">15-20</p>
-			<p><input type="radio" name="experience" value="twentyplus">20+</p>
-			<p><label>Skill level in HTML: <input type="range" name="skill" min="0" max="10"></label></p>
-
-			<p><label>Contact Preference: </label></p>
-			<p><input type="checkbox" name="option1" name="preference"><label>I would like to receive emails about new products and offers</label></p>
-			<p><input type="checkbox" name="option2" name="preference"><label>I would like to receive emails about my account and membership</label></p>
-			<p><input type="checkbox" name="option3" name="preference"><label>I would like to receive mail</label></p>
-
-			<input type="submit" value="Sign Up">
-			<input type="reset" name="Reset">
-			
+			<div class="element">
+				<h1>Sign up today to receive updates.</h1>
+				<p><label>First Name: <input type="text" name="firstName" placeholder="John" autocomplete="on" autofocus></label></p>
+				<p><label>Last Name: <input type="text" name="lastName" autocomplete="on" placeholder="Doe"/></label></p>
+				<p><label>Email: <input type="email" name="email" placeholder="name@domain.com" autocomplete="off"/></label></p>
+				<p><label>Password: <input type="Password" name="password"/></label></p>
+				<p><label>Re-Enter Password: <input type="password" name="reEnterPassword"/></label></p>
+				<p><label>Birthdate: <input type="date" name="birthdate" value="1998-01-01" /></label></p>
+				<p><label> Major: 
+					<input list = "majors" name="major" placeholder="Select a major"/>
+					<datalist id = "majors">
+						<option value="Civil Engineering"></option>
+						<option value="Computer Engineering"></option>
+						<option value="Computer Information Technology"></option>
+						<option value="Computer Science"></option>
+						<option value="Electrical Engineering"></option>
+						<option value="Engineering Management"></option>
+						<option value="Manufactoring Systems Engineering"></option>
+						<option value="Mechanical Engineering"></option>
+					</datalist>
+				</label></p>
+				<p class="favoriteColor"><label>Your Favorite Color: <input type="color" name="favoriteColor"/></label></p>
+				<p><label>Number of years in college: 
+					<select>
+						<option selected disabled hidden value="none">[choose]</option>
+						<option value = "1">1</option>
+						<option value = "2">2</option>
+						<option value = "3">3</option>
+						<option value = "4">4</option>
+					</select>
+				</label></p>
+				<p><label>Phone Number:</label><input type="tel" name="telephone" pattern="\d{3}[\-]\d{3}[\-]\d{4}" autocomplete="off">(###-###-####)</p>
+				<p><label>Link to your homepage:</label> <input type="url" name="yourURL" autocomplete="off"/></p>
+				<p><label>Years of experience: </label></p>
+				<p><input type="radio" name="experience" value="zerotofive">0-5</p>
+				<p><input type="radio" name="experience" value="fivetoten">5-10</p>
+				<p><input type="radio" name="experience" value="tentofifteen">10-15</p>
+				<p><input type="radio" name="experience" value="fifteentotwenty">15-20</p>
+				<p><input type="radio" name="experience" value="twentyplus">20+</p>
+				<p><label>Skill level in HTML: 0<input type="range" name="skill" min="0" max="10">10</label></p>
+				<p><label>Contact Preference: </label></p>
+				<p><input type="checkbox" name="option1"><label>I would like to receive emails about new products and offers</label></p>
+				<p><input type="checkbox" name="option2"><label>I would like to receive emails about my account and membership</label></p>
+				<p><input type="checkbox" name="option3"><label>I would like to receive mail</label></p>
+				<p><input type="submit" value="Sign Up"> <input type="reset" name="Reset"></p>
+			</div>
 		</form>
 	</article>
 	
