--- a/page1.html
+++ b/page1.html
@@ -27,6 +27,19 @@
 				<label><input type="radio" name="search" value="internal">Search within the Website</label></p>
 			</form>
 		</div>
+
+		<nav>
+			<h2>Links</h2>
+			<div class="dropdown">
+			<ul>
+				<span>Menu</span>
+				<div class="dropdown-content">
+				<li><a href="page1.html">Sign Up</a></li>
+				<li><a href="page2.html">Privacy Agreement</a></li>
+				<li><a href="page3.html">About Us</a></li>
+			</div>
+		</div>
+		</nav>
 	</header>
 
 	<article>
