Page 2 HTML and CSS

--- a/page1.html
+++ b/page1.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="page1-css.css">
 </head>
 <body class="classBody">
-	<header>
+	<header class="clear">
  		<div>
 			<img src="./doge.png">
 			<img src="./at sign.png" class="at">
@@ -28,7 +28,7 @@
 			</form>
 		</div>
 
-		<nav>
+		<nav class="alignright">
 			<h2>Links</h2>
 			<div class="dropdown">
 			<ul>
