--- a/page1.html
+++ b/page1.html
@@ -48,7 +48,7 @@
 				<h1>Sign up today to receive updates.</h1>
 				<p><label>First Name: <input type="text" name="firstName" placeholder="John" autocomplete="on" autofocus></label></p>
 				<p><label>Last Name: <input type="text" name="lastName" autocomplete="on" placeholder="Doe"/></label></p>
-				<p><label>Email: <input type="email" name="email" placeholder="name@domain.com" autocomplete="off"/></label></p>
+				<p><label>Email: <input type="email" name="email" placeholder="name@domain.com"/></label></p>
 				<p><label>Password: <input type="Password" name="password"/></label></p>
 				<p><label>Re-Enter Password: <input type="password" name="reEnterPassword"/></label></p>
 				<p><label>Birthdate: <input type="date" name="birthdate" value="1998-01-01" /></label></p>
